amended employment status to meet in middle with dev team. Stashed the flow we mapped in Miro as a 1.3 update. final content tweaks to that journey

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -43,12 +43,15 @@
                   <br><a href="v1-2/volunteer/confirmation-none">Confirmation page for no compensation</a>
                   <br><a href="v1-2/volunteer/confirmation-ec">Confirmation page for expense compensation</a>
                   <br><a href="v1-2/volunteer/confirmation-il">Confirmation page for income loss compensation</a>
-                  <br><a href="v1-2/emails/to-provider">Email to provider with a link to approve volunteer information</a>
+                  <br><a href="v1-2/emails/to-provider">Email to volunteer confirming application sent</a>
+
                 </li>
 
                 <li><strong>Care provider reviewing application</strong>
+                  <br><a href="v1-2/emails/to-provider">Email to provider with a link to approve volunteer information</a>
                   <br><a href="v1-2/provider/create-account/email">Provider creating account (if the first time)</a>         
-                 <br><a href="v1-2/provider/view-info-1">Provider checking volunteer information</a>         
+                 <br><a href="v1-2/provider/add_time/dashboard">Provider dashboard</a>      
+                 <br><a href="v1-2/provider/view-info-1">Provider checking volunteer information</a>            
                 <br><a href="v1-2/emails/to-volunteer-rejected-by-provider.html">Email to volunteer they have been rejected by provider or Local Authority</a>
                 <br><a href="v1-2/emails/to-LA-to-approve">Email to Local Authority to approve volunteer and provider information </a></li>
                 <p></p>
