--- a/app/views/v1-2/provider/create-account/confirmation.html
+++ b/app/views/v1-2/provider/create-account/confirmation.html
@@ -19,7 +19,7 @@
       <p>Your account is now active so you can review new applications from volunteers.</p>
       <p>You may need to share these details confidentially with someone in your organisation just in case you get sick or you’re on holiday.</p>
 
-      <p>You can now <a href="#">sign in</a> to your account.</p>
+      <p>You can now <a href="/add_time/dashboard.html">sign in</a> to your account.</p>
 
     </div>
   </div>
