--- a/app/views/v1-2/volunteer/confirmation-ec.html
+++ b/app/views/v1-2/volunteer/confirmation-ec.html
@@ -22,7 +22,7 @@
 
       <h2 class="govuk-heading-m">What happens next</h2>
       <p>
-        The contact for your placement will be emailed a link to verify your application. You may want to check they have received the email if you hope to start your placement within the next 7 days.</p>
+        The contact for your placement will receive a link to verify your application. You may want to check that the health and social care provider received the email if you hope to start your placement within the next 7 days.</p>
       <p>Your local authority or health authority will then approve the application, this is required for you to receive compensation.</p>
     
 
