--- a/app/views/v1-2/volunteer/confirmation-none.html
+++ b/app/views/v1-2/volunteer/confirmation-none.html
@@ -21,7 +21,7 @@
       </p> --> 
 
       <h2 class="govuk-heading-m">What happens next</h2>
-      <p>The contact for your placement will be emailed a link to verify your application. After this, the health and social care provider will be asked to confirm the application which will issue a certificate.</p>
+      <p>The contact for your placement will receive a link to verify your application. You may want to check that the health and social care provider received the email if you hope to start your placement within the next 7 days. Your local authority or health authority will then approve the application.</p>
       <p>You can start your placement once you have received the certificate.</p>
       <p>You may want to check they have received the email if you hope to start your placement within the next 7 days.</p> 
       
