content tweak to provider dashboard so the CTA isn't hidden away in tables

--- a/app/views/v1-2/provider/add_time/dashboard.html
+++ b/app/views/v1-2/provider/add_time/dashboard.html
@@ -32,8 +32,8 @@
           <td class="govuk-table__cell"><a href="placement-to-approve">Scott Approve</a></td>
           <td class="govuk-table__cell">01 Apr 2020</td>
           <td class="govuk-table__cell">4 weeks</td>
-          <td class="govuk-table__cell">Approved</td>
-          <td class="govuk-table__cell">Approved</td>
+          <td class="govuk-table__cell">Not approved</td>
+          <td class="govuk-table__cell">Not approved</td>
         </tr>
         <tr class="govuk-table__row">
           <td class="govuk-table__cell"><a href="ft-or-pt">Scott Time</a></td>
