--- a/app/views/v1-2/provider/add_time/placement-to-approve.html
+++ b/app/views/v1-2/provider/add_time/placement-to-approve.html
@@ -13,7 +13,7 @@
     <div class="govuk-grid-column-two-thirds-from-desktop">
 
       <h1 class="govuk-heading-xl">Volunteer placement details</h1>
-      <form action="confirmation" method="post" novalidate>
+      <form action="/v1-2/provider/view-info-1" method="post" novalidate>
 
       <div class="govuk-inset-text">
         You need to review this volunteers request to volunteer for you
