employer guidance mocked up

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -34,6 +34,12 @@
 
             <hr>
             <br>
+            <h2 class="govuk-heading-l">Exploration v1.3</h2>
+            <p>Last updated: Tuesday 28 April 2020</p>
+            <p><a href="v1-3/dashboard">Care Provider Dashboard</a>
+
+            <hr>
+            <br>
 
             <h2 class="govuk-heading-l">Full journey v1.2</h2>
             <p>Last updated: Tuesday 28 April 2020</p>
@@ -230,15 +236,17 @@
                <ul class="govuk-list govuk-!-font-size-16">
                  <li>
                    <a href="guidance/volunteer/guidance_overview">
-                     Volunteer guidance (Work in progress)
+                     Volunteer guidance 
                    </a>
                  </li>
-                
                  <li>
-                   <a href="#" class="govuk-!-font-weight-bold">
-                     More <span class="govuk-visually-hidden">in Subsection</span>
-                   </a>
-                 </li>
+                  <a href="guidance/employer/guidance_overview">
+                    Employer guidance (Work in progress)
+                  </a>
+                </li>
+               
+                
+                
                </ul>
              </nav>
            </aside> 
